# datacube-rs

./: .gitignore  .zenodo.json  BENCHMARKS.md  CITATION.cff  CLAUDE.md  Cargo.toml  README.md
crates/datacube-cli/: Cargo.toml
crates/datacube-cli/examples/: cross_target.rs
crates/datacube-cli/src/: main.rs  stack_cmd.rs
crates/datacube-core/: Cargo.toml
crates/datacube-core/benches/: cube_ops.rs  trend.rs
crates/datacube-core/src/: cube.rs  error.rs  lib.rs  temporal.rs
crates/datacube-core/src/stats/: breaks.rs  harmonic.rs  linear.rs  lstsq.rs  mann_kendall.rs  mod.rs  special.rs  theil_sen.rs
crates/datacube-io/: Cargo.toml
crates/datacube-io/src/: lib.rs  stack.rs  time.rs
crates/datacube-python/: Cargo.toml  README.md  pyproject.toml
crates/datacube-python/src/: lib.rs
crates/datacube-python/tests/: test_bindings.py
crates/datacube-wasm/: Cargo.toml  README.md
crates/datacube-wasm/src/: lib.rs
crates/datacube-wasm/tests/: web.rs
crates/datacube-wasm/web/: index.html
papers/: PAPER_PLAN.md
papers/draft/: datacube-rs.tex  refs.bib
scripts/: case_study.py  cross_target.mjs  cross_target.py  synthetic_recovery.py  validate_pymannkendall.py  validate_stats.py
