[package]
name = "datacube-cli"
description = "CLI for datacube-rs temporal trend analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "datacube"
path = "src/main.rs"

[dependencies]
datacube-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
