[package]
name = "datacube-cli"
description = "CLI for datacube-rs temporal trend analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "datacube"
path = "src/main.rs"

[features]
# `datacube stack`: STAC/COG stacking via datacube-io (needs the SurtGIS
# sibling checkout). Off by default so the CLI builds standalone.
stac = ["dep:datacube-io", "dep:surtgis-core", "dep:ndarray"]

[dependencies]
datacube-core = { workspace = true }
datacube-io = { workspace = true, optional = true }
surtgis-core = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
