[package]
name = "datacube-io"
description = "STAC/COG temporal stacking into datacube-rs cubes (reuses the SurtGIS cloud stack)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
datacube-core = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }
surtgis-core = { workspace = true }
surtgis-cloud = { workspace = true, features = ["native"] }

[dev-dependencies]
approx = { workspace = true }
